# wisp

./: .gitignore  comptime.md  spec.md  wisp.toml
.cursor/rules/: collaboration.mdc  compiler-architecture.mdc
compiler/: Cargo.toml
compiler/crates/wisp_ast/: Cargo.toml
compiler/crates/wisp_ast/src/: lib.rs
compiler/crates/wisp_borrowck/: Cargo.toml
compiler/crates/wisp_borrowck/src/: check.rs  lib.rs  state.rs
compiler/crates/wisp_codegen/: Cargo.toml
compiler/crates/wisp_codegen/src/: codegen.rs  lib.rs
compiler/crates/wisp_driver/: Cargo.toml
compiler/crates/wisp_driver/src/: main.rs
compiler/crates/wisp_hir/: Cargo.toml
compiler/crates/wisp_hir/src/: hir.rs  lib.rs  resolve.rs
compiler/crates/wisp_lexer/: Cargo.toml
compiler/crates/wisp_lexer/src/: lib.rs
compiler/crates/wisp_lsp/: Cargo.toml
compiler/crates/wisp_lsp/src/: lib.rs
compiler/crates/wisp_mir/: Cargo.toml
compiler/crates/wisp_mir/src/: lib.rs  lower.rs  mir.rs
compiler/crates/wisp_parser/: Cargo.toml
compiler/crates/wisp_parser/src/: lib.rs
compiler/crates/wisp_types/: Cargo.toml
compiler/crates/wisp_types/src/: check.rs  lib.rs  types.rs
editors/zed-wisp/: Cargo.toml  extension.toml  (+2 more)
examples/: add_test.ws  all_features.ws  arithmetic.ws  arrays.ws  assoc_fn_test.ws  auto_import_test.ws  borrow_errors.ws  borrow_test.ws  clone_test.ws  comparison_test.ws  compound_assign_test.ws  comprehensive.ws  control_flow.ws  control_flow2.ws  copy_test.ws  display_test.ws  display_test2.ws  enum_match.ws  enum_simple.ws  escape_test.ws  factorial.ws  fibonacci.ws  for_loops.ws  function_calls.ws  generics_test.ws  hello.ws  impl_test.ws  import_item_test.ws  import_multi_test.ws  import_test.ws  lambdas.ws  loop_test.ws  match_expr.ws  match_test.ws  method_test.ws  minimal.ws  named_args_test.ws  nested_namespace_test.ws  new_import_test.ws  open.ws  (+37 more)
std/: io.ws  mod.ws  ops.ws  option.ws  string.ws
tree-sitter-wisp/: README.md  grammar.js  package.json
(+11 files in other folders)
