[package]
name = "wisp_driver"
version.workspace = true
edition.workspace = true

[dependencies]
wisp_lexer = { path = "../wisp_lexer" }
wisp_ast = { path = "../wisp_ast" }
wisp_parser = { path = "../wisp_parser" }
wisp_hir = { path = "../wisp_hir" }
wisp_types = { path = "../wisp_types" }
wisp_borrowck = { path = "../wisp_borrowck" }
wisp_mir = { path = "../wisp_mir" }
wisp_codegen = { path = "../wisp_codegen" }
ariadne.workspace = true

